Added new game buttons to the end screens of PuzzleAdventure. Adjusted the font size of player health to make it more visible.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /[Bb]uilds/
 /Assets/AssetStoreTools*
 *.stackdump
+*[Ww]ebGL
+*_Data
 
 /Tutorials/
 
@@ -21,6 +23,8 @@ ExportedObj/
 *.pidb
 *.booproj
 *.svd
+*.zip
+*.exe
 .idea*/
 
 # Unity3D generated meta files
